<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Football Score</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="team_one">Team One</string>
    <string name="team_two">Team Two</string>
    <string name="touchdown">Touchdown</string>
    <string name="extra_point">Extra Point</string>
    <string name="field_goal">Field Goal</string>
    <string name="safety">Safety/ \nConversion</string>
    <string name="undo">Undo</string>
    <string name="end_game">End Game</string>
    <string name="title_activity_display_final_stats">DisplayFinalStats</string>
    <string name="new_game">New Game</string>

</resources>
